--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\lee-3-8\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+  "python.pythonPath": "C:\\Users\\leesi\\AppData\\Local\\Programs\\Python\\Python39\\python.exe"
 }
