--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    {"name":"Python: Current File","type":"python","request":"launch","program":"${file}","console":"integratedTerminal"},
+
     {
       "type": "node",
       "request": "launch",
@@ -11,7 +13,7 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}\\programmers\\완주하지_못한_선수.js"
+      "program": "${workspaceFolder}\\programmers\\가장큰수.js"
     }
   ]
 }
